<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name1">LaunchAK47</string>
    <string name="action_settings">Settings</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
        <string name="hours">小时</string>
    <string name="persons">人</string>
    <string name="login">登录</string>
    <string name="login_phone">手机号登录</string>
    <string name="register">注册</string>
    <string name="title_activity_login">Login</string>
    <string name="app_name">牧夫</string>
    <string name="logo_name">牧夫</string>
    <string name="slogan">让青春留下更多美好</string>
    <string name="meet_text">交友档</string>
    <string name="activity_text">活动</string>
    <string name="archive_text">我</string>
    <string name="reply">回复</string>
    <string name="title_activity_fill_meet_info">填写征友信息</string>
    <string name="privacy_protection_guide">隐私安全保护指引</string>
    <string name="dynamics_input_hint">记录和分享...</string>
        <string name="share_experience_hint">分享您在牧夫体验中的美妙时刻</string>
    <string name="share_experience">分享体验+</string>
    <string name="register_account_check_error">请输入正确的手机号码或邮箱</string>
    <string name="register_account_hint">请输入手机号码或邮箱</string>
    <string name="register_verify_code_hint">请输入验证码</string>
    <string name="register_password_hint">请输入密码</string>
    <string name="register_password_confirm_hint">再次请确认密码</string>
    <string name="loading_pull_up_tip">上拉查看更多</string>
    <string name="loading_no_more">都看完了，试试下拉更新吧</string>
    <string name="no_content">没有动态信息</string>
    <string name="loading_no_more_no_update">--都看完了--</string>
    <string name="no_more">--能看的都看完了--</string>
    <string name="no_more_order">--已显示全部订单--</string>
    <string name="dynamics_empty">未发布动态</string>
    <string name="evaluator_details">评价详情</string>
    <string name="publish">发布</string>
    <string name="reject_reason">拒绝原因</string>
    <string name="charge_setting_notice">请设置金额</string>
    <string name="subject_select_notice">请选择一个主题</string>
        <string name="type_select_notice">请选择体验类型</string>
        <string name="city_select_notice">请选择一个城市</string>
    <string name="route_name_empty_notice">请输入线路名称</string>
        <string name="package_name_empty_notice">请输入套餐名称</string>
    <string name="package_price_empty_notice">请输入套餐价格</string>
        <string name="starting_price_empty_notice">请输入起步价</string>
    <string name="limited_number_empty_notice">请输入限定的人数</string>
    <string name="additional_price_empty_notice">请输入超员加价</string>
    <string name="route_introduction_empty_notice">请描述一下线路</string>
    <string name="route_picture_empty_notice">请选择一些线路照片</string>
    <string name="qr_code_notice">请设置收款二维码</string>
    <string name="charge_introduction_notice">请填写收费说明</string>
        <string name="talent">达人</string>
    <string name="mufu_talent">牧夫达人</string>
    <string name="schoolmate_recommend">校友推荐</string>
    <string name="talent_apply">达人申请</string>
    <string name="experience_talent_apply">体验达人审核</string>
    <string name="talent_apply_content">您的申请提交后，需要经过平台审核，请及时关注系统消息</string>
    <string name="save">保存</string>
    <string name="done">完成</string>
    <string name="approve">认可</string>
    <string name="approved">已同意</string>
    <string name="back">返回</string>
    <string name="chat_top">置顶</string>
    <string name="chat_delete">删除聊天</string>
    <string name="quit_chat_top">取消置顶</string>
    <string name="look_friend">+我要交友</string>
    <string name="look_friend_notice">填写交友条件，匹配更合适的伙伴</string>
    <string name="talent_explanation_label">什么是达人？</string>
    <string name="talent_explanation_content">只要你充满热情，期望利用自己的热爱和专长，
        　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　做一些有趣或有意义的事情就可以成为达人，还能赚取收入并收获粉丝</string>
    <string name="experience_explanation_label">什么是体验？</string>
    <string name="experience_explanation_content">体验是由世界各地的学生或当地达人策划并组织开展的活动，通过这些活动，可以让大家对当地风土民俗和饮食文化等有比较深刻的体验。</string>
    <string name="experience_talent_explanation_label">什么是体验达人？</string>
    <string name="experience_talent_explanation_content">体验达人有两种方式：旅行向导和开展线下体验，可根据自身条件选择其中的一种或两种</string>
    <string name="guide_talent_explanation_label">什么是旅行向导？</string>
    <string name="guide_talent_explanation">给外地游客提供向导服务，有线下和线上两种服务形式：
        \n1.如果您喜欢旅游且时间充裕，喜欢结识新朋友，可以带领游客进行实地体验；
        \n2.可以提供线上咨询，解答游客关于当地的旅行咨询，协助制定旅行攻略等。\n
        \n服务对象主要是热爱旅游的大学生。\n
        \n旅行向导要求：
        \n·熟悉当地旅游、人文环境
        \n·能够制定合理的旅游攻略
        \n·能够让游客体验纯粹的民俗文化，有机会品味地道的美食
    </string>
    <string name="develop_explanation_label">什么是体验及如何开展体验？</string>
    <string name="develop_explanation_details">体验是由达人策划和组织开展的活动，活动可以是独特或有意义的，能够让参与者开阔眼界、留下美好记忆或者获得成长。
        \n体验类别丰富，可以是非遗文化、手工艺、人文历史、自然与户外、公益活动、派对等。
        \n您可以毫无束缚地尽情发挥，创造有吸引力的体验活动。</string>
    <string name="matchmaker_talent_explanation_label">什么是牵线达人？</string>
    <string name="matchmaker_talent_explanation_content">只要你乐于助人，愿意成就一段恋情。牵线达人可以做哪些事情？
        \n 1 组建单身团，招募单身好友加入
        \n 2 给寻求帮忙的人牵线搭桥
        \n 3 得到帮助的人会支付赞赏金表达感谢</string>
    <string name="begin_now">现在就开始吧</string>
    <string name="classmate">同学</string>
    <string name="roommate">室友</string>
    <string name="friend">好友</string>
    <string name="colleague">同事</string>
    <string name="schoolmate">校友</string>
    <string name="relative">亲人</string>
    <string name="modify_reference">修改推荐信</string>
    <string name="add_member">添加成员</string>
    <string name="added_member">已添加</string>
    <string name="invited_member">已邀请</string>
    <string name="invite_through">通过以下方式邀请</string>
    <string name="save_picture">保存图片</string>
    <string name="introduction">简介</string>
    <string name="education_background">教育背景</string>
    <string name="work_experience">工作经历</string>
    <string name="work_practice_experience">工作实习经历</string>
    <string name="honor_achievement">荣誉成就</string>
    <string name="Thesis_works">论文著作</string>
    <string name="research_achievement">研究成果</string>
    <string name="patent">发明专利</string>
    <string name="blog_articles">博客文章</string>
    <string name="meet_archive">交友详情 ></string>
    <string name="recommend">推荐</string>
    <string name="dynamics">动态</string>
        <string name="order">订单</string>
    <string name="single_group">交友团</string>
    <string name="discovery">发现</string>
    <string name="interesting_person">推荐感兴趣的人</string>
    <string name="interesting_group">推荐交友团</string>
    <string name="create_single_group">创建交友团</string>
    <string name="create_group">创建团</string>
    <string name="single_group_name_label">团名</string>
    <string name="single_group_name_hint">交友团名字</string>
    <string name="introduction_label">简介</string>
    <string name="introduction_hint">介绍一下你的团</string>
    <string name="org_label">学校</string>
    <string name="org_hint">此团所属高校</string>
    <string name="org_city">城市</string>
    <string name="org_city_hint">学校或组织所在地</string>
    <string name="set_group_logo">+为你的团设置一个徽标</string>
    <string name="group_logo">团标</string>
    <string name="dot">" · "</string>
    <string name="operation">"···"</string>
    <string name="dot_student">" · 学生"</string>
    <string name="group_leader">团长</string>
        <string name="delicious_food_talent">美食达人</string>
        <string name="contact_talent">联系达人</string>
    <string name="matchmaker">牵线达人</string>
    <string name="contact_matchmaker">找达人帮忙</string>
    <string name="evaluate_matchmaker">评价达人</string>
        <string name="consult">咨询</string>
    <string name="more_talent">更多达人</string>
    <string name="join_group">+申请加入</string>
    <string name="join_mufu">加入牧夫</string>
    <string name="enter_phone">输入手机号</string>
    <string name="phone_is_empty_error">请输入手机号</string>
    <string name="phone_is_not_exist">输入的手机号不存在</string>
    <string name="phone_is_error">请输入正确的手机号</string>
    <string name="enter_password">输入密码，最少6位</string>
    <string name="password_is_empty_error">请输入密码</string>
    <string name="password_error">密码错误</string>
    <string name="password_length_error">密码至少6位</string>
    <string name="password_repeat_error">密码不一致</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="sms_verification_code">验证码加入</string>
    <string name="enter_verification_code">输入验证码</string>
    <string name="send_verification_code">已发送验证码至</string>
    <string name="request_verification_code">请输入验证码</string>
    <string name="verify_verification_code_failed">校验失败，请60s后重新获取</string>
    <string name="login_by_password">密码登录</string>
    <string name="login_failed">登录失败</string>
    <string name="logining_progress">正在登陆…</string>
    <string name="saving_progress">正在保存…</string>
        <string name="submitting_progress">正在提交…</string>
    <string name="hetang_introduction">不负青春，让生活更精彩</string>
    <string name="join">加入</string>
    <string name="exit">退出</string>
    <string name="submit_error">提交失败</string>
    <string name="join_action">+加入</string>
    <string name="confirm">确认</string>
    <string name="or">或</string>
    <string name="account_exist">账号已存在，请输入密码登陆</string>
    <string name="request_new_password">重新设置密码后登陆</string>
    <string name="request_again">重新获取</string>
    <string name="login_new_password">新密码登录</string>
    <string name="prev">上一步</string>
    <string name="next">下一步</string>
    <string name="nickname">昵称</string>
    <string name="my">我的</string>
    <string name="name">姓名</string>
    <string name="realname">真实姓名</string>
    <string name="name_option">姓名(可选)</string>
    <string name="sex">性别</string>
    <string name="male">男生</string>
    <string name="female">女生</string>
        <string name="no_need">不需要</string>
    <string name="ensential">需要</string>
    <string name="identity_number">身份证号</string>
    <string name="living">居住地</string>
    <string name="locating">正在定位</string>
    <string name="select_living">选择居住地</string>
    <string name="select_city">+选择城市</string>
        <string name="identity_need_notice">此活动需要提供所有参与者的身份信息，仅用于购买保险等</string>
    <string name="add_identity_edit">+添加参与者身份信息</string>
    <string name="participant_identity_information">参加者身份信息</string>
    <string name="experience_introduction_title">介绍一下您开展的体验</string>
    <string name="service_introduction_title">旅行向导服务介绍</string>
        <string name="guide_service">向导服务内容</string>
        <string name="experience">体验</string>
    <string name="experience_content">体验内容</string>
    <string name="experience_recommend_title">精选体验和活动</string>
    <string name="guide_recommend_title">旅行向导</string>
        <string name="learning_growth">学习成长</string>
    <string name="language_culture">语言文化</string>
    <string name="friendship">交友联谊</string>
        <string name="natural_outdoor">自然户外</string>
    <string name="humanity_art">人文艺术</string>
    <string name="public_good">公益</string>
    <string name="theatre_performance">剧场表演</string>
        <string name="party_salon">派对沙龙</string>
        <string name="your_guide_talent">您的向导达人</string>
    <string name="your_experience_talent">您的体验达人</string>
    <string name="guide_talent">旅行向导</string>
        <string name="travel_talent">旅行达人</string>
    <string name="interest_talent">兴趣达人</string>
    <string name="growth_talent">成长达人</string>
    <string name="cancel">取消</string>
    <string name="university">学校</string>
    <string name="invite_member">招募成员</string>
    <string name="submit">提交</string>
    <string name="develop_experience">开展体验</string>
    <string name="travel_guide">申请旅行向导</string>
    <string name="submit_payment">上传赞赏码</string>
    <string name="payment_notice">得到帮助的人会支付一些感谢费表示心意。
        \n 在微信收付款里选择赞赏码，设置金额后保存，然后点下面的\"+\"上传</string>
    <string name="talent_introduction_title">达人介绍</string>
    <string name="talent_introduction">介绍一下你的优势，能够提供哪些帮助和服务</string>
    <string name="invite_member_condition">达人申请成功后，需要招募一些成员加入你的牵线团</string>
</resources>