<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:background="@drawable/border_all"
    android:orientation="vertical">
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
      <RadioButton
            android:id="@+id/radioMale"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/male"
            android:theme="@style/MyRadioButton"/>
        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_marginLeft="28dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/female"
            android:theme="@style/MyRadioButton"/>
    </RadioGroup>
  <EditText
        android:hint="@string/realname"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:hint="@string/university"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:hint="@string/identity_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
